tests/snapshots/it__parse_vg259_capabilities.snap
---
source: tests/it.rs
expression: capabilities
---
Capabilities {
    vcp: Some(
        [
            VcpCode {
                code: 2,
                values: [],
            },
            VcpCode {
                code: 4,
                values: [],
            },
            VcpCode {
                code: 5,
                values: [],
            },
            VcpCode {
                code: 8,
                values: [],
            },
            VcpCode {
                code: 16,
                values: [],
            },
            VcpCode {
                code: 18,
                values: [],
            },
            VcpCode {
                code: 20,
                values: [
                    5,
                    6,
                    8,
                    11,
                ],
            },
            VcpCode {
                code: 22,
                values: [],
            },
            VcpCode {
                code: 24,
                values: [],
            },
            VcpCode {
                code: 26,
                values: [],
            },
            VcpCode {
                code: 82,
                values: [],
            },
            VcpCode {
                code: 96,
                values: [
                    17,
                    18,
                    15,
                ],
            },
            VcpCode {
                code: 98,
                values: [],
            },
            VcpCode {
                code: 108,
                values: [],
            },
            VcpCode {
                code: 110,
                values: [],
            },
            VcpCode {
                code: 112,
                values: [],
            },
            VcpCode {
                code: 134,
                values: [
                    2,
                    11,
                ],
            },
            VcpCode {
                code: 135,
                values: [
                    0,
                    10,
                    20,
                    30,
                    40,
                    50,
                    60,
                    70,
                    80,
                    90,
                    100,
                ],
            },
            VcpCode {
                code: 138,
                values: [],
            },
            VcpCode {
                code: 141,
                values: [
                    1,
                    2,
                ],
            },
            VcpCode {
                code: 172,
                values: [],
            },
            VcpCode {
                code: 174,
                values: [],
            },
            VcpCode {
                code: 182,
                values: [],
            },
            VcpCode {
                code: 198,
                values: [],
            },
            VcpCode {
                code: 200,
                values: [],
            },
            VcpCode {
                code: 201,
                values: [],
            },
            VcpCode {
                code: 204,
                values: [
                    1,
                    2,
                    3,
                    4,
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    12,
                    13,
                    17,
                    18,
                    20,
                    26,
                    30,
                    31,
                    35,
                    48,
                    49,
                ],
            },
            VcpCode {
                code: 214,
                values: [
                    1,
                    5,
                ],
            },
            VcpCode {
                code: 220,
                values: [
                    1,
                    2,
                    3,
                    4,
                    5,
                    6,
                    7,
                    8,
                ],
            },
            VcpCode {
                code: 223,
                values: [],
            },
            VcpCode {
                code: 224,
                values: [
                    0,
                    1,
                    2,
                    3,
                    4,
                    5,
                ],
            },
            VcpCode {
                code: 225,
                values: [
                    0,
                    1,
                ],
            },
            VcpCode {
                code: 227,
                values: [
                    0,
                    1,
                    2,
                    3,
                    4,
                    5,
                    6,
                ],
            },
            VcpCode {
                code: 228,
                values: [
                    0,
                    1,
                    2,
                    3,
                    4,
                    5,
                ],
            },
            VcpCode {
                code: 229,
                values: [
                    0,
                    1,
                    2,
                    3,
                ],
            },
            VcpCode {
                code: 230,
                values: [
                    0,
                    1,
                    2,
                    3,
                    4,
                ],
            },
            VcpCode {
                code: 231,
                values: [
                    0,
                    1,
                ],
            },
            VcpCode {
                code: 233,
                values: [
                    0,
                    1,
                ],
            },
            VcpCode {
                code: 234,
                values: [
                    0,
                    1,
                ],
            },
            VcpCode {
                code: 235,
                values: [
                    0,
                    1,
                ],
            },
        ],
    ),
}
